--- a/MvcNormcontrol/Views/Students/Create.cshtml
+++ b/MvcNormcontrol/Views/Students/Create.cshtml
@@ -1,4 +1,4 @@
-@model MvcNormcontrol.Models.Student
+@model MvcNormcontrol.Models.StudentCreateViewModel
 
 @{
     ViewData["Title"] = "Create";
@@ -10,7 +10,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form enctype="multipart/form-data" asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Lastname" class="control-label"></label>
@@ -38,8 +38,16 @@
                 <span asp-validation-for="Discipline" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Document" class="control-label"></label>
+                <div class="custom-file">
+                    <input asp-for="Document" class="form-control custom-file-input" />
+                    <label class="custom-file-label">Выберите файл...</label>
+                </div>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Создать" class="btn btn-primary" />
             </div>
+
         </form>
     </div>
 </div>
@@ -49,5 +57,11 @@
 </div>
 
 @section Scripts {
+    <script>$(document).ready(function () {
+            $('.custom-file-input').on("change", function () {
+                var fileName = $(this).val().split("\\").pop();
+                $(this).next('.custom-file-label').html(fileName);
+            });
+        });</script>
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
+} 
