--- a/MvcNormcontrol/Views/Students/Edit.cshtml
+++ b/MvcNormcontrol/Views/Students/Edit.cshtml
@@ -1,4 +1,4 @@
-@model MvcNormcontrol.Models.Student
+@model MvcNormcontrol.Models.StudentEditViewModel
 
 @{
     ViewData["Title"] = "Edit";
@@ -10,12 +10,26 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit">
+        <form enctype="multipart/form-data" asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="ID" />
-            <input type="hidden" asp-for="Lastname" />
-            <input type="hidden" asp-for="Name" />
-            <input type="hidden" asp-for="Patronymic" />
+            <input hidden asp-for="ID" />
+            <input hidden asp-for="ExistingUniqueDocName" />
+            <input hidden asp-for="ExistingDocName" />
+            <div class="form-group">
+                <label asp-for="Lastname" class="control-label"></label>
+                <input asp-for="Lastname" class="form-control" />
+                <span asp-validation-for="Lastname" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Name" class="control-label"></label>
+                <input asp-for="Name" class="form-control" />
+                <span asp-validation-for="Name" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Patronymic" class="control-label"></label>
+                <input asp-for="Patronymic" class="form-control" />
+                <span asp-validation-for="Patronymic" class="text-danger"></span>
+            </div>
             <div class="form-group">
                 <label asp-for="Group" class="control-label"></label>
                 <input asp-for="Group" class="form-control" />
@@ -26,8 +40,13 @@
                 <input asp-for="Discipline" class="form-control" />
                 <span asp-validation-for="Discipline" class="text-danger"></span>
             </div>
-            <input type="hidden" asp-for="CompletionDate" />
-            <input type="hidden" asp-for="ReportStatus" />
+            <div class="form-group">
+                <label asp-for="Document" class="control-label"></label>
+                <div class="custom-file">
+                    <input asp-for="Document" class="form-control custom-file-input" />
+                    <label class="custom-file-label">Выберите новый файл...</label>
+                </div>
+            </div>
             <div class="form-group">
                 <input type="submit" value="Сохранить" class="btn btn-primary" />
             </div>
@@ -40,5 +59,11 @@
 </div>
 
 @section Scripts {
+    <script>$(document).ready(function () {
+            $('.custom-file-input').on("change", function () {
+                var fileName = $(this).val().split("\\").pop();
+                $(this).next('.custom-file-label').html(fileName);
+            });
+        });</script>
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
+} 
