--- a/MvcNormcontrol/Views/Students/Index.cshtml
+++ b/MvcNormcontrol/Views/Students/Index.cshtml
@@ -1,7 +1,7 @@
 @model MvcNormcontrol.Models.StudentGroupViewModel
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Список студентов";
 }
 
 <h1>Список студентов</h1>
