--- a/MvcNormcontrol/Views/Students/Create.cshtml
+++ b/MvcNormcontrol/Views/Students/Create.cshtml
@@ -1,7 +1,7 @@
 @model MvcNormcontrol.Models.StudentCreateViewModel
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Создать";
 }
 
 <h1>Новая проверка</h1>
@@ -40,7 +40,7 @@
             <div class="form-group">
                 <label asp-for="Document" class="control-label"></label>
                 <div class="custom-file">
-                    <input asp-for="Document" class="form-control custom-file-input" />
+                    <input asp-for="Document" type="file" accept=".docx" class="form-control custom-file-input" />
                     <label class="custom-file-label">Выберите файл...</label>
                 </div>
             </div>
