--- a/MvcNormcontrol/Views/Students/Edit.cshtml
+++ b/MvcNormcontrol/Views/Students/Edit.cshtml
@@ -1,7 +1,7 @@
 @model MvcNormcontrol.Models.StudentEditViewModel
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Редактировать";
 }
 
 <h1>Редактировать</h1>
@@ -43,7 +43,7 @@
             <div class="form-group">
                 <label asp-for="Document" class="control-label"></label>
                 <div class="custom-file">
-                    <input asp-for="Document" class="form-control custom-file-input" />
+                    <input asp-for="Document" type="file" accept=".docx" class="form-control custom-file-input" />
                     <label class="custom-file-label">Выберите новый файл...</label>
                 </div>
             </div>
